# sneaker-intel

./: .gitignore  CAREER_PLAYBOOK.md  Dockerfile  Makefile  README.md  README_copy.md  SUMMARY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
notebooks/: 01_eda_stockx.ipynb  02_eda_market_dynamics.ipynb  03_demand_forecasting.ipynb  04_release_strategy.ipynb  05_combined_signal.ipynb  06_ab_testing_release_timing.ipynb  07_llm_rag_analyst.ipynb
notebooks/archive/: Sneaker_ResellPred_Model_Edit.ipynb
src/sneaker_intel/: __init__.py  config.py  schemas.py  training.py
src/sneaker_intel/analysis/: __init__.py  demand_forecast.py  market_dynamics.py  release_strategy.py
src/sneaker_intel/api/: __init__.py  app.py  dependencies.py  schemas.py
src/sneaker_intel/dashboard/: __init__.py  app.py
src/sneaker_intel/data/: __init__.py  loader.py  transformers.py
src/sneaker_intel/evaluation/: __init__.py  comparison.py  interpretability.py  metrics.py
src/sneaker_intel/features/: __init__.py  base.py  color.py  market.py  pipeline.py  region.py  size.py  sneaker_type.py  stockx.py  temporal.py
src/sneaker_intel/models/: __init__.py  (+7 more)
tests/: conftest.py
tests/test_analysis/: test_market_dynamics.py
tests/test_api/: test_analytics.py  test_health.py  test_predict.py
tests/test_data/: test_loader.py  test_transformers.py
tests/test_evaluation/: test_metrics.py
tests/test_features/: test_color.py  test_pipeline.py  test_size.py  test_sneaker_type.py  test_stockx.py
tests/test_models/: test_ensemble.py  test_registry.py
(+14 files in other folders)
